--- a/packages/ts-evtx-messages/package.json
+++ b/packages/ts-evtx-messages/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "rm -rf dist && tsc -p tsconfig.json && node ../../scripts/postbuild-fix-extensions.mjs",
     "prepublishOnly": "npm run build"
   },
   "bin": {
