--- a/packages/ts-evtx-messages/package.json
+++ b/packages/ts-evtx-messages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ts-evtx/messages",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Message catalog provider for EVTX event logs (version-aware)",
   "type": "module",
   "main": "dist/index.js",
@@ -25,12 +25,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nsmetannikov/ts-evtx.git",
+    "url": "git+https://github.com/NickSmet/ts-evtx.git",
     "directory": "packages/ts-evtx-messages"
   },
-  "homepage": "https://github.com/nsmetannikov/ts-evtx#readme",
+  "homepage": "https://github.com/NickSmet/ts-evtx#readme",
   "bugs": {
-    "url": "https://github.com/nsmetannikov/ts-evtx/issues"
+    "url": "https://github.com/NickSmet/ts-evtx/issues"
   },
   "publishConfig": {
     "access": "public"
@@ -44,7 +44,7 @@
   "dependencies": {
     "better-sqlite3": "^11.0.0",
     "commander": "^12.1.0",
-    "ts-evtx": "^1.0.0"
+    "@ts-evtx/core": "workspace:*"
   },
   "devDependencies": {}
 }
